@@ -15,3 +15,6 @@ Nominatim was written by:
   Kurt Roeckx
   Rodolphe Quiédeville
   Marc Tobias Metten
+
+Reverse geocoding using Tiger data sponsored by
+  Linux training company, Guru Labs (https://www.gurulabs.com)
