@@ -5,6 +5,8 @@
 
 		protected $iPlaceID;
 
+		protected $bIsTiger = false;
+
 		protected $aLangPrefOrder = array();
 
 		protected $bAddressDetails = false;
@@ -35,6 +37,11 @@
 			$this->iPlaceID = $this->oDB->getOne($sSQL);
 		}
 
+		function setIsTiger($b = false)
+		{
+			$this->bIsTiger = $b;
+		}
+
 		function lookup()
 		{
 			if (!$this->iPlaceID) return null;
@@ -49,12 +56,29 @@
 			$sSQL .= " (case when centroid is null then st_y(st_centroid(geometry)) else st_y(centroid) end) as lat,";
 			$sSQL .= " (case when centroid is null then st_x(st_centroid(geometry)) else st_x(centroid) end) as lon";
 			$sSQL .= " from placex where place_id = ".(int)$this->iPlaceID;
+
+
+			if ($this->bIsTiger)
+			{
+				$sSQL = "select place_id,partition, 'T' as osm_type, place_id as osm_id, 'place' as class, 'house' as type, null as admin_level, housenumber, null as street, null as isin, postcode,";
+				$sSQL .= " 'us' as country_code, null as extratags, parent_place_id, null as linked_place_id, 30 as rank_address, 30 as rank_search,";
+				$sSQL .= " coalesce(0,0.75-(30::float/40)) as importance, null as indexed_status, null as indexed_date, null as wikipedia, 'us' as calculated_country_code, ";
+				$sSQL .= " get_address_by_language(place_id, $sLanguagePrefArraySQL) as langaddress,";
+				$sSQL .= " null as placename,";
+				$sSQL .= " null as ref,";
+				$sSQL .= " st_y(centroid) as lat,";
+				$sSQL .= " st_x(centroid) as lon";
+				$sSQL .= " from location_property_tiger where place_id = ".(int)$this->iPlaceID;
+			}
+
 			$aPlace = $this->oDB->getRow($sSQL);
+
 
 			if (PEAR::IsError($aPlace))
 			{
 				failInternalError("Could not lookup place.", $sSQL, $aPlace);
 			}
+
 			if (!$aPlace['place_id']) return null;
 
 			if ($this->bAddressDetails)
@@ -62,6 +86,7 @@
 				$aAddress = $this->getAddressNames();
 				$aPlace['aAddress'] = $aAddress;
 			}
+
 
 			$aClassType = getClassTypes();
 			$sAddressType = '';
